--- a/local/pressure-washing-doncaster.html
+++ b/local/pressure-washing-doncaster.html
@@ -1,1 +1,300 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Doncaster Pressure Washing Services – Driveways, Patios, Walls & More | Instant Online Quote</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-doncaster.html">
+<meta name="description" content="Professional Doncaster pressure washing for driveways, patios, walls, decking, fences, and commercial properties. Restore surfaces, enhance safety, and get an instant online quote today.">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Driveway Pressure Washing in Doncaster</h2>
+<h3>Restore Your Driveway with Professional Pressure Washing</h3>
+<p>Your driveway is the first thing visitors notice when they arrive at your Doncaster home, and over time, dirt, moss, oil stains, and weathering can make it look worn and neglected. Our professional driveway pressure washing service combines high-powered equipment with safe, eco-friendly cleaning solutions to remove years of grime. Whether your surface is block paving, concrete, asphalt, or resin-bound, we carefully tailor our approach to preserve its integrity while delivering a flawless finish. We understand that each driveway has its own challenges, from stubborn moss in joints to deep-set oil stains, and our expert team tackles them efficiently, leaving your driveway looking brand new. By scheduling regular maintenance, you can also extend the lifespan of your driveway and maintain the curb appeal of your Doncaster property year-round.</p>
+<p>We prioritise not just the cleanliness but also the safety of your driveway. Using advanced pressure washing equipment, we remove slippery algae, moss, and mould that can make surfaces hazardous, especially during wet months in Doncaster. Our eco-friendly detergents ensure that your surrounding plants and lawns remain unharmed, so you can enjoy a sparkling driveway without compromising your garden. We also offer stain treatments for oil and tyre marks, restoring your driveway to its original condition. Many of our local customers appreciate the convenience of our fast, reliable service, often completing the job within a few hours, with minimal disruption. By choosing our driveway pressure washing, you’re investing in a clean, safe, and visually appealing entrance that enhances the overall value and aesthetic of your Doncaster home.</p>
+<p>Ready to transform your driveway? Our Doncaster pressure washing team delivers a deep, long-lasting clean, removing moss, grime, and stains efficiently. Schedule a hassle-free appointment today and enjoy a driveway that looks brand new, increases curb appeal, and provides a safer surface for your family and guests.</p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="A freshly pressure-washed Doncaster driveway, showing a bright, clean surface free of moss and stains."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patio Pressure Washing</h2>
+<p>Patios in Doncaster can quickly accumulate dirt, algae, and weathering, making them look dull and uninviting. Our patio pressure washing service lifts years of grime and restores your outdoor space to its original condition. From stone and concrete to paving slabs, we carefully select the right pressure and cleaning solution for each surface.</p>
+<p>Beyond aesthetics, cleaning your patio prevents slippery surfaces and protects against moss and mould growth. Our expert team in Doncaster ensures a deep clean that enhances the safety and longevity of your patio while keeping surrounding plants unharmed.</p>
+<p>Refresh your outdoor space with our reliable patio pressure washing. Perfect for entertaining or simply enjoying a spotless area, our service helps Doncaster homeowners maintain a beautiful, safe patio year-round.</p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Doncaster patio pressure-washed, showing clean paving slabs with moss and dirt removed"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>House & Garden Wall Pressure Washing</h2>
+<p>Walls are an essential feature of your home and garden in Doncaster, providing structure, privacy, and aesthetic appeal. Over time, external walls, garden boundaries, and retaining structures can become covered in algae, mould, dirt, and general weathering. Our house and garden wall pressure washing service targets these issues effectively, using the right combination of pressure, detergents, and techniques to restore walls without causing damage. Whether it’s brick, stone, rendered surfaces, or fencing walls, our team adapts the method to suit each material. We focus on both visible grime and deep-seated staining, ensuring a thorough clean. Regular maintenance not only improves the appearance but also helps prevent long-term damage caused by moss and algae growth, saving Doncaster homeowners costly repairs.</p>
+<p>Our wall pressure washing services also enhance the safety of your garden areas. Slippery moss and mould can build up on garden walls, leading to hazards, especially on steps or uneven surfaces. By removing this growth, we make your walls safer and more visually appealing. Our Doncaster team works efficiently and cleanly, taking care to protect your plants, flower beds, and lawn from cleaning runoff. Customers often remark on the dramatic improvement, as even older walls regain their original colour and texture. We combine expert knowledge with high-quality equipment to deliver a consistent, professional result that enhances the overall look of your property.</p>
+<p>Investing in professional wall cleaning adds long-term value to your Doncaster home. Beyond appearances, it protects your walls from decay and staining, ensuring durability. Our team provides a reliable, convenient service that leaves every surface looking refreshed and well-maintained.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="Doncaster garden wall after professional pressure washing, free of algae, dirt, and grime."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Decking & Fence Pressure Washing</h2>
+<p>Decking and fences are vital elements of your outdoor space in Doncaster, providing structure, privacy, and areas for relaxation or entertaining. However, they are highly susceptible to dirt, algae, moss, and weathering. Our professional decking and fence pressure washing service revitalises these surfaces, restoring their natural beauty while extending their lifespan. Using specialist techniques and appropriate pressure levels, we clean timber, composite, and treated materials without causing damage. For decking, we carefully remove slippery algae and grime between boards, while fences receive an even, thorough clean that highlights their natural finish. Our Doncaster team ensures that every surface is treated efficiently, leaving your outdoor areas safe, appealing, and ready for use. Regular cleaning not only enhances appearance but also protects your investment by reducing the need for costly repairs or replacement.</p>
+<p>We prioritise safety and longevity, removing mould and algae that can make decking hazardous, particularly during wet months. Our team uses eco-friendly detergents that preserve the integrity of timber and surrounding plants in Doncaster gardens.</p>
+<p>Enjoy a welcoming outdoor space all year with our decking and fence pressure washing. Doncaster homeowners trust our professional, reliable team to deliver a deep clean that enhances both safety and aesthetics. By scheduling regular maintenance, your decking and fences remain durable, visually appealing, and ready for gatherings or family use, creating an outdoor environment you’ll be proud to showcase.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Doncaster wooden decking and fence after professional pressure washing, showing clean, vibrant timber free of moss and dirt."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Commercial Pressure Washing in Doncaster</h2>
+<p>Commercial properties in Doncaster require professional cleaning to maintain a safe and attractive environment for clients, employees, and visitors. Our commercial pressure washing service covers shopfronts, walkways, car parks, and building exteriors, removing dirt, grime, oil stains, and algae. We work around your business schedule to minimise disruption, providing efficient cleaning without compromising quality. With high-powered equipment and experienced operators, we deliver consistent, thorough results that protect your property and enhance its professional image. Many local businesses rely on us for regular maintenance, ensuring their Doncaster premises remain spotless and welcoming.</p>
+<p>From small offices to large retail spaces, we tailor our commercial pressure washing to your needs. We use environmentally safe cleaning agents and techniques suitable for various surfaces, including concrete, brick, paving, and cladding. Our trained team ensures safety protocols are followed, preventing damage to surfaces and surrounding areas. With flexible scheduling, Doncaster business owners can maintain a clean exterior without disrupting daily operations, boosting the overall impression for customers and staff alike.</p>
+<p>Investing in professional commercial pressure washing protects your property, enhances safety, and improves curb appeal. Our Doncaster team delivers fast, reliable service, ensuring every exterior is thoroughly cleaned, well-maintained, and ready to impress clients and visitors.</p>
+</section>
+
+<!-- Section 6 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2></h2>
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+<h2>Get Your Doncaster Pressure Washing Quote Today</h2>
+<p>Transform your home or business exterior with our expert Doncaster pressure washing services. From driveways and patios to walls, decking, fences, and commercial properties, we provide a professional, reliable service that restores surfaces, enhances safety, and boosts curb appeal. Request your instant online quote today and experience the difference of a deep, thorough clean from trusted local professionals.</p>
+<img src="/images/pressure-washing-algae.webp"
+alt="Happy Doncaster homeowner enjoying a freshly pressure-washed driveway and garden."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-doncaster.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5227,
+"longitude": -1.324
+},
+"areaServed": "Doncaster",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
