--- a/how-to/pressure-wash-patios.html
+++ b/how-to/pressure-wash-patios.html
@@ -1,1 +1,214 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Doncaster Patio Pressure Washing | Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/how-to/pressure-wash-patios.html">
+<meta name="description" content="Professional patio pressure washing in Doncaster. Restore patios, paving, walls & decking with safe, eco-friendly cleaning. Get a free quote today!">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em;
+text-align: center;
+margin-bottom: 20px;
+}
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+.logo{
+max-height:90px;
+width:auto;
+}
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+.lightbox {
+display: none;
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8);
+justify-content: center;
+align-items: center;
+z-index: 9999;
+cursor: pointer;
+flex-direction: column;
+}
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
 
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<section style="margin-bottom:40px; text-align:center;">
+
+<section>
+<h1>Doncaster Patio Pressure Washing</h1>
+<p>
+Professional patio pressure washing in Doncaster is one of the most effective ways to restore tired, weathered outdoor spaces. Over time, patios become slippery and discoloured due to moss, algae, lichen, and ground-in dirt. Our experienced team uses commercial-grade equipment and eco-friendly cleaning solutions to safely deep-clean patio slabs, paving stones, and seating areas. Whether you want a safer surface, improved appearance, or a refreshed outdoor space ready for use, our local Doncaster patio cleaning service delivers outstanding results.
+</p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Before and after patio pressure washing showing restored clean paving slabs."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<section>
+<h2>FAQs: Patio Pressure Washing</h2>
+
+<h3>1. What is patio pressure washing?</h3>
+<p>Patio pressure washing uses controlled high-pressure water to remove dirt, algae, moss, lichen, and stains from patio surfaces.</p>
+
+<h3>2. Is pressure washing safe for patios?</h3>
+<p>Yes. Pressure levels are carefully adjusted to suit patio slabs, paving stones, concrete, and natural stone surfaces.</p>
+
+<h3>3. What patio surfaces can be pressure washed?</h3>
+<p>Concrete slabs, block paving, sandstone, limestone, porcelain tiles, and natural stone patios can all be safely cleaned.</p>
+
+<h3>4. How do you prepare a patio before pressure washing?</h3>
+<p>Preparation includes removing furniture, clearing debris, inspecting joints, and applying pre-treatment for algae or moss.</p>
+
+<h3>5. Do you use chemicals on patios?</h3>
+<p>Only eco-friendly, biodegradable treatments are used where required to tackle stubborn growth and staining.</p>
+
+<h3>6. How long does patio pressure washing take?</h3>
+<p>Most patios take between 1–3 hours depending on size and condition.</p>
+
+<h3>7. Can pressure washing remove slippery algae?</h3>
+<p>Yes. Pressure washing is highly effective at removing algae and restoring grip to patio surfaces.</p>
+
+<h3>8. Do you clean surrounding walls and steps?</h3>
+<p>Yes. Patio steps, walls, and edging can all be pressure washed during the service.</p>
+
+<h3>9. Will pressure washing remove weeds between slabs?</h3>
+<p>Yes. Weeds, moss, and growth between joints are removed, helping to slow regrowth.</p>
+
+<h3>10. Do I need to be home during patio cleaning?</h3>
+<p>No. As long as access and a water supply are available, the service can be completed without you present.</p>
+
+<h3>11. What happens after patio pressure washing?</h3>
+<p>The area is thoroughly rinsed and left clean; re-sanding of joints can be recommended where applicable.</p>
+
+<h3>12. How often should patios be pressure washed?</h3>
+<p>Most patios benefit from cleaning every 12–24 months.</p>
+
+<h3>13. Can pressure washing damage patio slabs?</h3>
+<p>No. Professional equipment and experience ensure safe, damage-free cleaning.</p>
+
+<h3>14. Is patio pressure washing environmentally friendly?</h3>
+<p>Yes. Water-efficient machines and environmentally responsible products are used.</p>
+
+<h3>15. Is patio pressure washing weather dependent?</h3>
+<p>Services can be carried out in most conditions, avoiding heavy rain or freezing temperatures.</p>
+
+<h3>16. Can you pressure wash decking and fencing nearby?</h3>
+<p>Yes. Decking, fencing, and other exterior surfaces can also be cleaned.</p>
+
+<h3>17. Do you offer commercial patio cleaning?</h3>
+<p>Yes. We clean patios and outdoor seating areas for pubs, restaurants, and commercial premises.</p>
+
+<h3>18. Is pressure washing noisy?</h3>
+<p>Some noise is expected, but disruption is minimal and short-lived.</p>
+
+<h3>19. How much does patio pressure washing cost?</h3>
+<p>Prices depend on size and condition. Free quotes are available.</p>
+
+<h3>20. Why choose a local Doncaster patio pressure washing service?</h3>
+<p>Local expertise, fast response, and reliable results make us the trusted choice.</p>
+</section>
+
+<section>
+<h2>Book Your Doncaster Patio Pressure Washing Service Today</h2>
+<p>Transform your patio and outdoor living space with our professional pressure washing services. Contact our Doncaster team today for a free quote and enjoy a cleaner, safer patio.</p>
+</section>
+
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
+
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+</footer>
+
+</body>
+</html>
