--- a/how-to/pressure-wash-patios.html
+++ b/how-to/pressure-wash-patios.html
@@ -212,3 +212,233 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 </body>
 </html>
+
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "What is patio pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Patio pressure washing is a professional cleaning method that uses controlled high-pressure water to remove dirt, algae, moss, lichen and grime from patio surfaces."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing safe for patios?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. When carried out professionally, pressure washing is safe. Pressure levels are adjusted to suit patio slabs, paving stones and natural stone surfaces."
+}
+},
+{
+"@type": "Question",
+"name": "What patio surfaces can be pressure washed?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Concrete slabs, block paving, porcelain tiles, sandstone, limestone and other natural stone patios can all be safely pressure washed."
+}
+},
+{
+"@type": "Question",
+"name": "How do you prepare a patio before pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Preparation includes removing furniture, clearing debris, inspecting joints and applying pre-treatment solutions where algae or moss growth is present."
+}
+},
+{
+"@type": "Question",
+"name": "Do you use chemicals during patio pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Eco-friendly and biodegradable treatments are used only when required to break down stubborn growth and staining."
+}
+},
+{
+"@type": "Question",
+"name": "How long does patio pressure washing take?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most patio pressure washing jobs take between one and three hours depending on size and condition."
+}
+},
+{
+"@type": "Question",
+"name": "Can pressure washing remove slippery algae from patios?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Pressure washing is highly effective at removing algae and restoring grip to patio surfaces."
+}
+},
+{
+"@type": "Question",
+"name": "Do you clean patio steps and surrounding areas?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Patio steps, walls, edging and surrounding hard surfaces can also be pressure washed."
+}
+},
+{
+"@type": "Question",
+"name": "Will pressure washing remove weeds between patio slabs?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Pressure washing removes visible weeds, moss and growth between joints, helping to slow regrowth."
+}
+},
+{
+"@type": "Question",
+"name": "Do I need to be home during the service?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "No. As long as access to the patio area and a water supply are available, the service can be completed without you being present."
+}
+},
+{
+"@type": "Question",
+"name": "What happens after patio pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "The patio is thoroughly rinsed and left clean; re-sanding of joints may be recommended where applicable."
+}
+},
+{
+"@type": "Question",
+"name": "How often should patios be pressure washed?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most patios benefit from professional pressure washing every 12 to 24 months."
+}
+},
+{
+"@type": "Question",
+"name": "Can pressure washing damage patio slabs?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "No. Professional techniques ensure effective cleaning without damaging patio surfaces or joints."
+}
+},
+{
+"@type": "Question",
+"name": "Is patio pressure washing environmentally friendly?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Water-efficient equipment and environmentally responsible cleaning products are used wherever possible."
+}
+},
+{
+"@type": "Question",
+"name": "Is patio pressure washing weather dependent?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Pressure washing can be carried out in most conditions, although heavy rain or freezing temperatures are avoided."
+}
+},
+{
+"@type": "Question",
+"name": "Can you pressure wash decking and fencing nearby?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Decking, fencing and other exterior surfaces can be safely pressure washed."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer commercial patio cleaning?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We provide patio and outdoor seating area cleaning for pubs, restaurants and commercial properties."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing noisy?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Some noise is expected, but disruption is minimal and short-lived."
+}
+},
+{
+"@type": "Question",
+"name": "How much does patio pressure washing cost?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Costs vary depending on patio size and condition. Free, no-obligation quotes are available."
+}
+},
+{
+"@type": "Question",
+"name": "Why choose a local Doncaster patio pressure washing service?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Local knowledge, fast response times and trusted results make a professional Doncaster patio pressure washing service the best choice."
+}
+}
+]
+}
+</script>
+
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/how-to/pressure-wash-patios.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5227,
+"longitude": -1.324
+},
+"areaServed": "Doncaster",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex";
+lightboxImg.src = src;
+lightboxImg.alt = alt;
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
