--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -137,6 +137,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <h1>Professional Pressure Washing Services in Arksey</h1>
 <p>Maintaining the exterior of your property in Arksey can be challenging. Driveways, patios, walls, and other outdoor surfaces are constantly exposed to the elements, traffic, and natural growth. Over time, dirt, algae, moss, lichen, and general stains build up, making surfaces look tired, slippery, and unsafe. Our professional pressure washing services are designed to remove this grime efficiently, restoring your property’s appearance while keeping it safe and well-maintained.</p>
 <p>We use high-quality pressure washing equipment combined with the right techniques for each surface. Before any work begins, we carefully assess the area to ensure the correct pressure and method is used—whether it’s block paving, concrete, tarmac, natural stone, or rendered walls. This approach guarantees a deep, thorough clean without causing damage. For both homes and businesses in Arksey, pressure washing is a practical way to enhance curb appeal, improve safety, and protect outdoor surfaces from long-term wear.</p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Professional pressure washing service in Arksey cleaning outdoor surfaces and removing dirt, algae, and moss from residential property exteriors."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
